--- a/materiais.html
+++ b/materiais.html
@@ -436,7 +436,7 @@
                     </p>
                 </div>
                 <div class="intro-image">
-                    <img src="img/materiais/fredericas-btc.jpg" alt="Exemplo de uso do adesivo Bitcoin na Frederica's">
+                    <img src="img/materiais/fredericas-btc.jpg" alt="Exemplo de uso do adesivo Bitcoin na Frederica's" style="width: 100%; height: auto; align-self: center;">
                 </div>
             </div>
         </section>
