Editei a cor de fundo da classe teste

--- a/a.html
+++ b/a.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/btcmap-flags.css">
     <style>
+        .classe-teste {
+            background-color: #f7931a;
+        }
         :root {
             --bitcoin-orange: #f7931a;
             --bitcoin-orange-light: #ffa94d;
