Alteração do nome de Aqui aceita Bitcoin? para Aceita Bitcoin?

--- a/downloads/guia-rapido.html
+++ b/downloads/guia-rapido.html
@@ -173,7 +173,7 @@
         <div class="passo">
             <div class="passo-numero">2</div>
             <div class="passo-conteudo">
-                <div class="passo-titulo">Cadastre seu estabelecimento no projeto "Aqui aceita Bitcoin?"</div>
+                <div class="passo-titulo">Cadastre seu estabelecimento no projeto "Aceita Bitcoin?"</div>
                 <div class="passo-descricao">
                     Acesse www.aquiaceitabitcoin.com.br e preencha o formulário de cadastro com os dados do seu estabelecimento. Isso permitirá que seu negócio apareça no mapa Bitcoin e atraia novos clientes.
                 </div>
@@ -183,7 +183,7 @@
         <div class="passo">
             <div class="passo-numero">3</div>
             <div class="passo-conteudo">
-                <div class="passo-titulo">Coloque o adesivo "Aqui aceita Bitcoin" em local visível</div>
+                <div class="passo-titulo">Coloque o adesivo "Aceita Bitcoin?" em local visível</div>
                 <div class="passo-descricao">
                     Posicione o adesivo na entrada do estabelecimento e próximo ao caixa para que os clientes saibam que você aceita pagamentos em Bitcoin.
                 </div>
@@ -242,12 +242,12 @@
             </div>
             
             <div class="dica-item">
-                <strong>• Suporte:</strong> Em caso de dúvidas, entre em contato com a equipe do projeto "Aqui aceita Bitcoin?" pelo WhatsApp ou email disponíveis no site.
+                <strong>• Suporte:</strong> Em caso de dúvidas, entre em contato com a equipe do projeto "Aceita Bitcoin?" pelo WhatsApp ou email disponíveis no site.
             </div>
         </div>
         
         <div class="footer">
-            <p>Este guia foi desenvolvido pelo projeto "Aqui aceita Bitcoin?" - uma iniciativa do Clube BR⚡LN</p>
+            <p>Este guia foi desenvolvido pelo projeto "Aceita Bitcoin?" - uma iniciativa do Clube BR⚡LN</p>
             <p>www.aquiaceitabitcoin.com.br | contato@aquiaceitabitcoin.com.br</p>
         </div>
     </div>
