--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="footer-container">
       <div class="footer-section">
-        <h4>Aqui aceita Bitcoin?</h4>
+        <h4>Aceita Bitcoin?</h4>
         <p>Iniciativa do Clube BR⚡LN para promover a adoção de Bitcoin em estabelecimentos comerciais.</p>
         <div class="social-links">
           <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
@@ -39,7 +39,7 @@
       </div>
     </div>
     <div class="copyright">
-      <p>&copy; 2025 Aqui aceita Bitcoin? - Clube BR⚡LN. Todos os direitos reservados.</p>
+      <p>&copy; 2025 Aceita Bitcoin? - Clube BR⚡LN. Todos os direitos reservados.</p>
       <p>Powered by <img src="https://bitcoin.org/img/icons/logotop.svg" alt="Bitcoin Logo" class="bitcoin-logo"> Bitcoin</p>
     </div>
   </footer>
