--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <header>
     <div class="header-container">
       <div class="logo">
-        <img src="img/logos/logo.png" alt="Logo Aqui aceita Bitcoin?" onerror="this.src='https://via.placeholder.com/150x50/f7931a/ffffff?text=Aqui+aceita+Bitcoin?'">
+        <img src="img/logos/logo.png" alt="Logo Aceita Bitcoin?" onerror="this.src='https://via.placeholder.com/150x50/f7931a/ffffff?text=Aqui+aceita+Bitcoin?'">
       </div>
       <nav>
         <ul>
