--- a/sobre.html
+++ b/sobre.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre o Projeto - Aqui aceita Bitcoin?</title>
+    <title>Sobre o Projeto - Aceita Bitcoin?</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -421,13 +421,13 @@
     <main>
         <div class="sobre-container">
             <h1 class="section-title">Sobre o Projeto</h1>
-            <p class="section-subtitle">Conheça a história e os objetivos do "Aqui aceita Bitcoin?"</p>
+            <p class="section-subtitle">Conheça a história e os objetivos do "Aceita Bitcoin?"</p>
             
             <div class="intro-section">
                 <div class="intro-content">
                     <h2 class="intro-title">Nossa Missão</h2>
                     <p class="intro-text">
-                        Inspirado no projeto de Rolante-RS, que conseguiu com sucesso a adesão de mais de 200 estabelecimentos na cidade que aceitam Bitcoin, nosso projeto "Aqui aceita Bitcoin?" visa difundir o Bitcoin como moeda forte em Carambeí e região dos Campos Gerais.
+                        Inspirado no projeto de Rolante-RS, que conseguiu com sucesso a adesão de mais de 200 estabelecimentos na cidade que aceitam Bitcoin, nosso projeto "Aceita Bitcoin?" visa difundir o Bitcoin como moeda forte em Carambeí e região dos Campos Gerais.
                     </p>
                     <p class="intro-text">
                         Nossa meta é criar mais de 1000 estabelecimentos que aceitem esta nova tecnologia, facilitando o primeiro contato das pessoas com o Bitcoin sem necessidade de entender conceitos complexos inicialmente.
@@ -527,7 +527,7 @@
                     <div class="timeline-content">
                         <h3 class="timeline-title">Início do Projeto</h3>
                         <p class="timeline-text">
-                            O projeto "Aqui aceita Bitcoin?" foi fundado pelo Clube BR⚡LN com o objetivo de difundir o uso de Bitcoin como meio de pagamento em estabelecimentos comerciais de Carambeí e região.
+                            O projeto "Aceita Bitcoin?" foi fundado pelo Clube BR⚡LN com o objetivo de difundir o uso de Bitcoin como meio de pagamento em estabelecimentos comerciais de Carambeí e região.
                         </p>
                     </div>
                 </div>
@@ -560,7 +560,7 @@
                     <div class="timeline-content">
                         <h3 class="timeline-title">Lançamento do Site</h3>
                         <p class="timeline-text">
-                            Lançamento oficial do site "Aqui aceita Bitcoin?", facilitando o cadastro de novos estabelecimentos e a criação de carteiras Bitcoin.
+                            Lançamento oficial do site "Aceita Bitcoin?", facilitando o cadastro de novos estabelecimentos e a criação de carteiras Bitcoin.
                         </p>
                     </div>
                 </div>
