--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Administração - Aqui aceita Bitcoin?</title>
+    <title>Administração - Aceita Bitcoin?</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js">
@@ -734,7 +734,7 @@
                             <div class="col-md-6">
                                 <div class="form-group mb-3">
                                     <label for="projectName" class="form-label">Nome do Projeto</label>
-                                    <input type="text" class="form-control" id="projectName" value="Aqui aceita Bitcoin?">
+                                    <input type="text" class="form-control" id="projectName" value="Aceita Bitcoin?">
                                 </div>
                                 <div class="form-group mb-3">
                                     <label for="projectDescription" class="form-label">Descrição do Projeto</label>
@@ -1437,7 +1437,7 @@
                                  '🔗 https://mizmgesl.manus.space/cadastro.html';
                         break;
                     case 'project-update':
-                        content = '📢 ATUALIZAÇÃO DO PROJETO "AQUI ACEITA BITCOIN?" 📢\n\n' +
+                        content = '📢 ATUALIZAÇÃO DO PROJETO "Aceita Bitcoin?" 📢\n\n' +
                                  'Estamos expandindo! Agora cobrimos 3 cidades na região dos Campos Gerais:\n\n' +
                                  '🏙️ Carambeí: 3 estabelecimentos\n' +
                                  '🏙️ Ponta Grossa: 2 estabelecimentos\n' +
