--- a/cadastro.html
+++ b/cadastro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro de Estabelecimento - Aqui aceita Bitcoin?</title>
+    <title>Cadastro de Estabelecimento - Aceita Bitcoin?</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
@@ -511,7 +511,7 @@
                                 <div class="form-check mb-2" style="display: none;">
                                     <input class="form-check-input" type="checkbox" id="sourceAquiAceitaBitcoin" checked disabled>
                                     <label class="form-check-label" for="sourceAquiAceitaBitcoin">
-                                        <strong>Cadastrado através do projeto "Aqui aceita Bitcoin?"</strong>
+                                        <strong>Cadastrado através do projeto "Aceita Bitcoin?"</strong>
                                     </label>
                                 </div>
                             </div>
