--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aqui aceita Bitcoin? - Clube BR⚡LN</title>
+    <title>Aceita Bitcoin? - Clube BR⚡LN</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/btcmap-flags.css">
@@ -621,7 +621,7 @@
     
     <main class="container">
         <section class="hero" style="padding: 30px 20px;">
-            <h1>Aqui aceita Bitcoin?</h1>
+            <h1>Aceita Bitcoin?</h1>
             <p>Encontre estabelecimentos que aceitam Bitcoin em Carambeí e região</p>
         </section>
         
@@ -672,7 +672,7 @@
                     </div>
                     <div class="step-title">Comece a aceitar Bitcoin<br></div>
                     <div class="step-description">
-                        Exiba o adesivo, divulgue nas redes sociais "Aqui aceita Bitcoin" e comece a receber pagamentos.
+                        Exiba o adesivo, divulgue nas redes sociais "Aceita Bitcoin?" e comece a receber pagamentos.
                     </div>
                     <div class="d-flex justify-content-center mt-3">
                         <a href="materiais.html" class="cta-button">
